--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     background-image: url('hero.jpg');
     background-size: cover;
     background-position: center;
-    color: white;
+    color: rgb(149, 173, 14);
     text-align: center;
     padding: 100px 0;
   }
